background image full stretch + color fix

--- a/Styles/Css/Style.css
+++ b/Styles/Css/Style.css
@@ -1,14 +1,14 @@
 header{
 padding-top: 100px;
 text-align: center;
-color: #CB9A76;
+color: rgb(115,97,98); // rgb(170,125,128);   //#CB9A76;
 font-size: 22px;
 font-family:  "Times new Roman",Times,serif;
 font-style: oblique;
 }
 
 #Accueil {
-z-index: 4;
+z-index: 5;
 position: fixed;
 left: 60px;
 color: white;
@@ -20,7 +20,7 @@ font-size: 25px;
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 3;
+  z-index: 4;
   overflow: hidden;
 }
 
@@ -31,22 +31,24 @@ font-size: 25px;
   background-repeat: no-repeat;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   -webkit-backdrop-filter: blur(8px);
   filter: blur(5px);
-  height: 520px;
-  background-size: cover;
+  height: 100%;
+  background-size: 100% 100%;
   transform: scale(1.080);
-  overflow: hidden;
+  overflow:  visible;
+  object-fit: fill;
 }
 
 .picture{
 
  margin: auto;
- z-index: 2;
+ z-index: 5;
  position: relative;
  height: 102px;
  text-align: center;
+
 
 }
 
@@ -61,28 +63,46 @@ width: 190px;
 border-radius: 50%;
 border-width: 5px;
 background-color: white;
-
+border: 8px solid #f9fafa;
 }
 
-.wrapper{
+.wrapper1{
 height: 440px;
+}
+
+.wrapper2{
+  height: 38px;
 }
 
 .middle{
 text-align: center;
 position: relative;
-z-index: 0;
+z-index: 4;
 height:500px;
 width: 100%;
-background-color: lightgrey;
+background-color: #f9fafa;
+
 }
 
 .description{
-margin: auto;
+
+font-size: 22px;
+top: 20%;
+margin:  0 auto;
 position: relative;
-top: 50%;
--ms-transform: translateY(-50%);
-transform: translateY(-50%);
+color: rgb(115,97,98);
+
+
+}
+
+.top-description{
+  font-style: italic;
+  font-size: 22px;
+  top:15%;
+  margin: 0 auto;
+  position: relative;
+  color: rgb(64,121,107);
+
 }
 
 p{
